--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,12 +4,20 @@
   --fallback-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  --react-ny-bg: rgb(243, 238, 238);
+}
+
+#app {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 body {
   background-color: var(--bkg-color);
   color: var(--txt-color);
   margin: 0;
+  padding: 0;
   font-family: var(--fallback-font);
   overflow: hidden;
   font-size: 3rem;
@@ -21,8 +29,7 @@ button {
   margin: 1em 0;
 }
 
-div {
-  height: 100vh;
-  margin: 0;
-  padding: 1em;
+footer {
+  background-color: white;
+  width: 100%;
 }
