--- a/src/styles/root.module.css
+++ b/src/styles/root.module.css
@@ -1,4 +1,5 @@
 .top {
+  display: none;
   padding: 2rem;
   background-color: var(--react-ny-bg);
   width: 100%;
@@ -9,6 +10,7 @@
 }
 
 .bottom {
+  display: none;
   padding: 2rem;
   width: 100%;
   display: grid;
@@ -26,14 +28,15 @@
 
 .wrapper {
   display: flex;
+  padding: 2rem;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .screen {
-  width: 30vw;
-  height: 20vh;
+  width: 80vw;
+  height: 40vh;
   border: solid 3px white;
   border-radius: 10px;
   background-color: #f0f0f0 !important;
